# fast-api-sales-engine

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: dependencies.py  helpers.py  models.py  routes.py
migrations/: env.py
migrations/versions/: 220971b183ec_set_up_tables.py
queries/: country_contribution.sql  repeat_buyer_revenue.sql  top_country_relationships.sql
